# bookk-bookk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  app.py  docker-compose.yaml  entrypoint.sh  generator.py  gunicorn.ini  gunicorn.ini.py  helper.py  model.py  patch_client.py  prepare_commit_msg.py  pyproject.toml  requirements.txt  requirements_local.txt  run.sh  settings.py  test.py
.circleci/: Dockerfile  config.yml
.github/workflows/: ci.yaml
apps/: app.py  enums.py  functions.py  gunicorn.ini.py  helper.py  patch_client.py  settings.py
apps/crontab/: monthly_stat.py
apps/dtos/: dialog.py  opengraph.py
apps/dtos/internal/: book.py
apps/dtos/notion/: book_submission.py  database.py  image_block.py  text.py
apps/dtos/slack/: api_repsponse.py  book.py  book_submission.py  dialog.py
apps/forms/: dialog.py
apps/tests/: conftest.py  fixtures.py  test_open_form.py  test_submit_book.py
crontab/: monthly_stat.py
forms/: book.py  dialog.py
models/: book.py  dialog.py
requirements/: local.txt  prod.txt
tests/: common.py  test_open_form.py  test_submit_book.py
