[tool.poetry]
name = "bookk-bookk"
version = "0.1.0"
description = ""
authors = ["dev-daeun <devdaeun@gmail.com>"]
readme = "README.md"
packages = [{include = "bookk_bookk"}]

[tool.poetry.dependencies]
python = "3.9.16"
fastapi = "^0.95.0"
aiohttp = "^3.8.4"
notion = "0.0.25"
uvicorn = "^0.21.1"
slackclient = "2.7.1"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pre-commit = "^3.2.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
