[tool.poetry]
name = "bookk-bookk"
version = "0.1.0"
description = ""
authors = ["dev-daeun <devdaeun@gmail.com>"]
readme = "README.md"
packages = [{include = "bookk_bookk"}]

[tool.poetry.dependencies]
python = "3.9.16"
fastapi = "0.109.1"
uvicorn = "0.23.2"
slackclient = "2.9.4"
python-dotenv = "^1.0.0"
gunicorn = "21.0.1"
httpx = "0.24.1"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
pre-commit = "^3.2.2"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
